# py-proxy

./: .coverage  .gitignore  Makefile  Pipfile  README.md  coverage.xml  main.py  pyproject.toml  readme.MD  settings.py  setup.cfg  test_client.py
.mypy_cache/3.8/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  array.data.json  array.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  conftest.data.json  conftest.meta.json  contextvars.data.json  contextvars.meta.json  enum.data.json  enum.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  queue.data.json  queue.meta.json  selectors.data.json  selectors.meta.json  socket.data.json  socket.meta.json  ssl.data.json  ssl.meta.json  string.data.json  string.meta.json  sys.data.json  sys.meta.json  test_application.data.json  test_application.meta.json  (+8 more)
.mypy_cache/3.8/os/: path.data.json  (+3 more)
Libs/: HttpParser.py  ProxyHandler.py  Request.py  Response.py
htmlcov/: index.html  py_proxy___init___py.html  py_proxy___main___py.html  py_proxy_application_py.html  status.json
py-proxy/: main.py  settings.py
py-proxy/Libs/: HttpParser.py  ProxyHandler.py
py_proxy/: __init__.py  __main__.py  application.py  http_parser.py  http_protocol.py  http_proxy.py  server_protocol.py
py_proxy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: Ntest_one.py  conftest.py  test_application.py  test_http_proxy.py  test_server_protocol.py
(+86 files in other folders)
